--- a/client/index.html
+++ b/client/index.html
@@ -11,82 +11,91 @@
     <title>Dashboard - Siswa Panel</title>
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="/assets/plugin/materialize/css/materialize.min.css">
-    <script src="/assets/plugin/materialize/js/materialize.min.js"></script>
-    <script src="/assets/plugin/jquery/jquery.min.js"></script>
 </head>
 
 <body>
     <nav>
         <div class="nav-wrapper blue-grey darken-3">
-            <div class="brand-logo right">
-                <img src="https://pd.smkn3metro.sch.id/dokumen/5556/image-profile-1bcac9f13a9b936306d2904c2a60b98a.jpg"
-                    alt="">
-            </div>
             <ul class="left">
                 <a href="/" class="breadcrumb">Shappy</a>
             </ul>
         </div>
     </nav>
     <main>
-        <div class="row profile">
+        <div class="row">
+
+            <!-- Home light -->
             <div class="col s12">
-                <div class="card-panel blue-grey darken-3 white-text">
-                    <b>
-                        <span>Total Kelengkapan Data :</span>
-                        <span class="new badge blue" data-badge-caption="%">100</span>
-                    </b>
-                </div>
-            </div>
-            <div class="col s12">
-                <div class="card-panel blue-grey darken-3">
+                <div class="card blue-grey darken-3">
                     <div class="card-content white-text">
-                        <div class="card-title">
-                            <h4>Profile</h4>
+                        <div style="margin-bottom: 12px;">
+                            <span class="card-title">Lampu Rumah</span>
+                            <span class="new badge blue" data-badge-caption="">Lampu Aktif</span>
                         </div>
-                        <div class="item">
-                            <div class="data">
-                                <h5>A. DZAKY YUSUF</h5>
-                                <h6>5931</h6>
-                            </div>
-                        </div>
-                        <div class="more row">
-                            <div class="col s12 m8 offset-m2">
-                                <table class="white-text ">
-                                    <tbody>
-                                        <tr>
-                                            <td class="key"><b>Jurusan</b></td>
-                                            <td>MM B</td>
-                                        </tr>
-                                        <tr>
-                                            <td><b>Status</b></td>
-                                            <td>Siswa</td>
-                                        </tr>
-                                        <tr>
-                                            <td><b>Angkatan</b></td>
-                                            <td>2021</td>
-                                        </tr>
-                                        <tr>
-                                            <td><b>Sekolah</b></td>
-                                            <td>SMK Negeri 3 Metro</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
+                        <p>Tingkat sensitivitas:</p>
+                        <form action="#">
+                            <p class="range-field">
+                                <input type="range" id="test5" min="0" max="255" />
+                            </p>
+                        </form>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">MODE: AUTO</a>
                     </div>
                 </div>
-                <div class="divider"></div>
             </div>
+            <!-- end: Home light -->
+
+            <!-- Garden light -->
+            <div class="col s12">
+                <div class="card blue-grey darken-3">
+                    <div class="card-content white-text">
+                        <div style="margin-bottom: 12px;">
+                            <span class="card-title">Lampu Taman</span>
+                            <span class="new badge blue" data-badge-caption="">Lampu Aktif</span>
+                        </div>
+                        <p>Tingkat sensitivitas:</p>
+                        <form action="#">
+                            <p class="range-field">
+                                <input type="range" id="test5" min="0" max="255" />
+                            </p>
+                        </form>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">MODE: MANUAL</a>
+                    </div>
+                </div>
+            </div>
+            <!-- end: Garden light -->
+
+            <!-- <div class="col s12">
+                <div class="card blue-grey darken-3">
+                    <div class="card-content white-text">
+                        <span class="card-title">Card Title</span>
+                        <p>I am a very simple card. I am good at containing small bits of information.
+                            I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
+                        <a href="#">This is a link</a>
+                    </div>
+                </div>
+            </div> -->
+
         </div>
     </main>
+
     <footer class="page-footer">
         <div class="footer-copyright">
             <div class="container white-text center">
-                2020 &copy; <a href="https://www.instagram.com/pramana_282/" target="_blank">Neszha</a> version 1.1.7 |
-                All rights reserved.
+                2022 &copy; <a href="/">Shappy</a> | Smart Home System 
             </div>
         </div>
     </footer>
+
+    <script src="/assets/plugin/jquery/jquery.min.js"></script>
+    <script src="/assets/plugin/materialize/js/materialize.min.js"></script>
+
 </body>
 
 </html>
