Menambahkan logo aplikasi

--- a/client/index.html
+++ b/client/index.html
@@ -104,8 +104,8 @@
                     <div class="card-content white-text">
                         <div style="margin-bottom: 12px;">
                             <span class="card-title">Deteksi Pergerakan</span>
-                            <span v-if="montionDetector.isActive" class="new badge green" data-badge-caption="">Status Alarm: Aktif</span>
-                            <span v-else class="new badge red" data-badge-caption="">Status Alarm: Mati</span>
+                            <span v-if="montionDetector.isActive" class="new badge green" data-badge-caption="">Status: Aktif</span>
+                            <span v-else class="new badge red" data-badge-caption="">Status: Mati</span>
                         </div>
                         <p v-if="activities.montionDetector.length">
                             <span>Rekaman aktifitas: </span>
