--- a/client/index.html
+++ b/client/index.html
@@ -104,8 +104,7 @@
                     <div class="card-content white-text">
                         <div style="margin-bottom: 12px;">
                             <span class="card-title">Deteksi Pergerakan</span>
-                            <span v-if="montionDetector.isActive" class="new badge green" data-badge-caption="">Status: Aktif</span>
-                            <span v-else class="new badge red" data-badge-caption="">Status: Mati</span>
+                            <span v-if="montionDetector.isActive" class="new badge green" data-badge-caption="">Alarm Aktif</span>
                         </div>
                         <p v-if="activities.montionDetector.length">
                             <span>Rekaman aktifitas: </span>
@@ -127,19 +126,34 @@
             </div>
             <!-- end: Montion Detector -->
 
-            <!-- <div class="col s12">
+            <!-- Automatic Gate -->
+            <div class="col s12">
                 <div class="card blue-grey darken-3">
                     <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information.
-                            I am convenient because I require little markup to use effectively.</p>
+                        <div style="margin-bottom: 12px;">
+                            <span class="card-title">Gerbang Otomatis</span>
+                            <span v-if="automaticGate.isActive" class="new badge green" data-badge-caption="">Status: Terbuka</span>
+                            <span v-else class="new badge red" data-badge-caption="">Status: Tertutup</span>
+                        </div>
+                        <p v-if="activities.automaticGate.length">
+                            <span>Rekaman aktifitas: </span>
+                            <a @click="deleteActivity('automaticGate')" href="javascript:void(0)">Bersihkan</a>
+                            <ul>
+                                <li v-for="(item, i) of activities.automaticGate" :key="i">
+                                    <span>- {{ item }}</span>
+                                </li>
+                            </ul>
+                        </p>
                     </div>
                     <div class="card-action">
-                        <a href="#">This is a link</a>
-                        <a href="#">This is a link</a>
+                        <a @click="modeOnChange('automaticGate')" href="javascript:void(0)">
+                            <span v-if="automaticGate.auto">MODE: AKTIF</span>
+                            <span v-else>MODE: TIDAK AKTIF</span>
+                        </a>
                     </div>
                 </div>
-            </div> -->
+            </div>
+            <!-- end: Automatic Gate -->
 
         </div>
     </main>
